<resources>
    <string name="app_name">生活点滴</string>
    <string name="reset">重置</string>

    <string name="home_location">地点</string>
    <string name="home_money">金额</string>
    <string name="home_name">名称</string>
    <string name="home_pay_from">支付来源</string>
    <string name="home_voice_result">语音识别结果</string>
    <string name="home_voice_input">语音识别</string>
    <string name="home_record">录入</string>
    <string name="home_today_balance">今日余额：</string>
    <string name="home_week_balance">本周余额：</string>
    <string name="home_month">本月余额：</string>

    <!--导航切换栏-->
    <string name="main_home">主页</string>
    <string name="main_data">数据</string>
    <string name="main_user">个人中心</string>

    <!--数据页点击按钮-->
    <string name="data_search">搜索</string>
    <string name="data_search_today">本日</string>
    <string name="data_search_week">本周</string>
    <string name="data_search_month">本月</string>
    <string name="data_search_not_format">未解析</string>
    
    <!--个人中心页文字-->
    <string name="user_budget_today">每日预算(元)：</string>
    <string name="user_budget_week">每周预算(元)：</string>
    <string name="user_budget_month">每月预算(元)：</string>
</resources>
