<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/common_dp_0.2"
    android:paddingBottom="@dimen/common_dp_0.2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgMHome"
            style="@style/main_bottom_image"/>
        <ImageView
            android:id="@+id/imgMData"
            style="@style/main_bottom_image"/>
        <ImageView
            android:id="@+id/imgMUser"
            style="@style/main_bottom_image"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMHome"
            android:text="@string/main_home"
            style="@style/main_bottom_text"/>
        <TextView
            android:id="@+id/tvMData"
            android:text="@string/main_data"
            style="@style/main_bottom_text"/>
        <TextView
            android:id="@+id/tvMUser"
            android:text="@string/main_user"
            style="@style/main_bottom_text"/>

    </LinearLayout>

</LinearLayout>