<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/common_dp_1">

        <Button
            android:id="@+id/btnFilterStartDate"
            style="@style/data_date_select"
            android:text="2010-10-01" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/x40"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btnFilterStartDate"
            android:layout_alignTop="@id/btnFilterStartDate"
            android:layout_toRightOf="@id/btnFilterStartDate"
            android:gravity="center"
            android:text="~"
            android:textSize="@dimen/app_text_size_8"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFilterEndDate"
            style="@style/data_date_select"
            android:layout_marginLeft="@dimen/x40"
            android:layout_toRightOf="@id/btnFilterStartDate"
            android:text="2010-10-01" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/data_options"
            android:layout_toRightOf="@+id/btnFilterEndDate"
            android:text="@string/data_search" />

        <Button
            android:id="@+id/btnSeToday"
            style="@style/data_options"
            android:layout_below="@+id/btnFilterStartDate"
            android:layout_marginTop="@dimen/common_dp_1"
            android:text="@string/data_search_today" />

        <Button
            android:id="@+id/btnSeWeek"
            style="@style/data_options"
            android:layout_alignBottom="@id/btnSeToday"
            android:layout_marginLeft="@dimen/common_dp_1.5"
            android:layout_toRightOf="@id/btnSeToday"
            android:text="@string/data_search_week" />

        <Button
            android:id="@+id/btnSeMonth"
            style="@style/data_options"
            android:text="@string/data_search_month"
            android:layout_above="@+id/view"
            android:layout_toLeftOf="@+id/btnSearch"
            android:layout_toStartOf="@+id/btnSearch" />

        <Button
            android:id="@+id/btnSeNotFormat"
            style="@style/data_options"
            android:layout_alignBottom="@+id/btnSeMonth"
            android:layout_alignParentRight="true"
            android:text="@string/data_search_not_format" />

        <View
            android:layout_marginTop="@dimen/common_dp_0.5"
            android:layout_below="@id/btnSeToday"
            style="@style/line_horizontal"
            android:id="@+id/view" />

        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/btnSeToday"
            android:layout_marginTop="@dimen/common_dp_1.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <View
        style="@style/line_horizontal"></View>

    <include
        layout="@layout/activity_main_bottom_options"></include>

</LinearLayout>
